Mon Mar 13 2006  Loic Dachary  <loic@gnu.org>

	* Release 1.0.15

Sun Mar 12 2006  Loic Dachary  <loic@gnu.org>

	* Release 1.0.14

	* pokernetwork/pokerserver.py (PokerService.getUserInfo): SQL sum() may return 
	  a strings instead of int (MySQL 5)

	* pokerweb/pages/nusoap.php: rename soapclient to nusoapclient to avoid
	  name conflict in php5

	* pokerui/pokerrenderer.py (PokerRenderer.chatFormatMessage): import string

	* pokerclient2d/poker2d.xml.in: add ping attribute (hang bug)

	* pokerclient2d/poker2d-test.xml: python2.4 paths

	* conf/poker.server.xml.in: timeout -> player_timeout

Tue Wed 27 2006  Johan Euphrosine <johan@mekensleep.org>

	* pokerui/
	* pokerclient2d/
	add check_warning box

Tue Mar 07 2006  cedric pinson  <cpinson@freesheep.org>

	* pokernetwork/pokerpackets.py:
	add field game_id to packet PacketDisplayNode

Tue Feb 27 2006  Johan Euphrosine <johan@mekensleep.org>

	* pokernetwork/pokerclient.py (PokerNetworkGameClient): 
	new class inherited from PokerGameClient
	added skin_level member to keep track of level data per table
	* pokerui/
	* pokerclient2d/
	added muck dialog box instead of yes/no

Tue Feb 13 2006  Johan Euphrosine <johan@mekensleep.org>

	* pokerui/pokerrenderer.py (PokerRenderer.bootstrap): 
	based login show at startup upon first_time flag
	* pokernetwork/pokerclient.py (PokerClientFactory.saveAuthToFile): 
	save "" login instead of username to update first_time flag
	
Fri Feb 10 2006  Loic Dachary  <loic@gnu.org>

	* pokerclient2d/poker2d.py (run): if settings file does not exist,
	  copy default one to it instead of copying it to ~/.poker2d/poker2d.xml

Tue Jan 24 2006  Johan Euphrosine <johan@mekensleep.org>
	
	* pokerui/pokerrenderer.py (PokerRenderer.updateDecorations): 
	added hide/show "lobby_tab_window" when leaving/entering lobby OR tournament

	* pokerclient2d/tournaments.c: 
	* pokerclient2d/lobby.c: 
	added g_lobby_tab_state for keeping track of the state of tournament/lobby tab.	