@@ -1,5 +1,7 @@
 Release 1.0.15
 
+Portability fixes.
+
 Release 1.0.14
 
 Muck control.
