@@ -1,6 +1,9 @@
-Mon Mar 13 2006  Loic Dachary  <loic@gnu.org>
+Tue Mar 14 2006  Loic Dachary  <loic@gnu.org>
 
 	* Release 1.0.15
+
+	* pokernetwork/dispatch.py: import from twisted because it is deprecated in
+	  twisted-2.2.0
 
 Sun Mar 12 2006  Loic Dachary  <loic@gnu.org>
 
